@@ -435,6 +435,7 @@ The following extensions are migrated into MediaWiki 1.14:
 * (bug 11733) Fixed parameter validation in importTextFile.php
 * (bug 16712) Special:NewFiles updated to use "newer"/"older" paging messages
   for clarity over "previous/next"
+* (bug 16612) Fixed "noprint" class for Modern skin print style
 
 === API changes in 1.14 ===
 
